force-app/main/default/objects/OpportunityLineItem/fields/AdditionalText__c.field-meta.xml
<CustomField>
    <fullName>AdditionalText__c</fullName>
    <label>Additional Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>