force-app/main/default/objects/OpportunityLineItem/fields/Almax__c.field-meta.xml
<CustomField>
    <fullName>Almax__c</fullName>
    <label>Al max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>