force-app/main/default/objects/OpportunityLineItem/fields/Almin__c.field-meta.xml
<CustomField>
    <fullName>Almin__c</fullName>
    <label>Al min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>