force-app/main/default/objects/OpportunityLineItem/fields/Bmax__c.field-meta.xml
<CustomField>
    <fullName>Bmax__c</fullName>
    <label>B max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>