force-app/main/default/objects/OpportunityLineItem/fields/Bmin__c.field-meta.xml
<CustomField>
    <fullName>Bmin__c</fullName>
    <label>B min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>