force-app/main/default/objects/OpportunityLineItem/fields/BundleWeightCa__c.field-meta.xml
<CustomField>
    <fullName>BundleWeightCa__c</fullName>
    <label>Bundle Weight ca.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>