force-app/main/default/objects/OpportunityLineItem/fields/BundleWeightMin__c.field-meta.xml
<CustomField>
    <fullName>BundleWeightMin__c</fullName>
    <label>Bundle Weight min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>