force-app/main/default/objects/OpportunityLineItem/fields/BusinessAreaOfProduct__c.field-meta.xml
<CustomField>
    <fullName>BusinessAreaOfProduct__c</fullName>
    <formula>TEXT( FinishedGoods__r.BusinessArea__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Area Of Product</label>
    <type>Text</type>
</CustomField>