force-app/main/default/objects/OpportunityLineItem/fields/BusinessSubGroupOfProduct__c.field-meta.xml
<CustomField>
    <fullName>BusinessSubGroupOfProduct__c</fullName>
    <formula>TEXT( FinishedGoods__r.ProductGroupBusinessArea__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Business Area</label>
    <type>Text</type>
</CustomField>