force-app/main/default/objects/OpportunityLineItem/fields/Cmax__c.field-meta.xml
<CustomField>
    <fullName>Cmax__c</fullName>
    <label>C max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>