force-app/main/default/objects/OpportunityLineItem/fields/Cmin__c.field-meta.xml
<CustomField>
    <fullName>Cmin__c</fullName>
    <label>C min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>