force-app/main/default/objects/OpportunityLineItem/fields/CoilWeightApprox__c.field-meta.xml
<CustomField>
    <fullName>CoilWeightApprox__c</fullName>
    <label>Coil Weight approx.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>