force-app/main/default/objects/OpportunityLineItem/fields/CoilWeightMax__c.field-meta.xml
<CustomField>
    <fullName>CoilWeightMax__c</fullName>
    <label>Coil Weight Max.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>