force-app/main/default/objects/OpportunityLineItem/fields/CoilWeightMin__c.field-meta.xml
<CustomField>
    <fullName>CoilWeightMin__c</fullName>
    <label>Coil Weight Min.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>