force-app/main/default/objects/OpportunityLineItem/fields/CoPForPP1__c.field-meta.xml
<CustomField>
    <fullName>CoPForPP1__c</fullName>
    <description>Stores the CoP value for pp1. fetched from Heroku</description>
    <label>CoP for PP1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>