force-app/main/default/objects/OpportunityLineItem/fields/CostOfProduction__c.field-meta.xml
<CustomField>
    <fullName>CostOfProduction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Costs (internal view)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>