force-app/main/default/objects/OpportunityLineItem/fields/CountryOfRelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>CountryOfRelatedAccount__c</fullName>
    <formula>(TEXT(Opportunity.Account.BillingCountryCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Of Related Account</label>
    <type>Text</type>
</CustomField>