force-app/main/default/objects/OpportunityLineItem/fields/Crmax__c.field-meta.xml
<CustomField>
    <fullName>Crmax__c</fullName>
    <label>Cr max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>