force-app/main/default/objects/OpportunityLineItem/fields/Crmin__c.field-meta.xml
<CustomField>
    <fullName>Crmin__c</fullName>
    <label>Cr min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>