force-app/main/default/objects/OpportunityLineItem/fields/Cumax__c.field-meta.xml
<CustomField>
    <fullName>Cumax__c</fullName>
    <label>Cu max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>