force-app/main/default/objects/OpportunityLineItem/fields/Cumin__c.field-meta.xml
<CustomField>
    <fullName>Cumin__c</fullName>
    <label>Cu min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>