force-app/main/default/objects/OpportunityLineItem/fields/CustomerMaterial__c.field-meta.xml
<CustomField>
    <fullName>CustomerMaterial__c</fullName>
    <label>Customer Material</label>
    <length>35</length>
    <type>Text</type>
</CustomField>