force-app/main/default/objects/OpportunityLineItem/fields/CustomerRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequestDate__c</fullName>
    <label>Customer Request Date</label>
    <type>Date</type>
</CustomField>