force-app/main/default/objects/OpportunityLineItem/fields/CustomerSpecificMargin__c.field-meta.xml
<CustomField>
    <fullName>CustomerSpecificMargin__c</fullName>
    <formula>Opportunity.Account.CustomerSpecificMargin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Specific Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>