force-app/main/default/objects/OpportunityLineItem/fields/DateOfDelivery__c.field-meta.xml
<CustomField>
    <fullName>DateOfDelivery__c</fullName>
    <label>Date Of Delivery</label>
    <type>Date</type>
</CustomField>