force-app/main/default/objects/OpportunityLineItem/fields/DeliveryPromiseUntil__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPromiseUntil__c</fullName>
    <label>Delivery Promise Until</label>
    <type>Date</type>
</CustomField>