force-app/main/default/objects/OpportunityLineItem/fields/DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTime__c</fullName>
    <label>Delivery Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>