force-app/main/default/objects/OpportunityLineItem/fields/DimensionAFrom__c.field-meta.xml
<CustomField>
    <fullName>DimensionAFrom__c</fullName>
    <label>Dimension A from in mm</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>