force-app/main/default/objects/OpportunityLineItem/fields/DimensionAFromUnit__c.field-meta.xml
<CustomField>
    <fullName>DimensionAFromUnit__c</fullName>
    <label>Dimension A from</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>