force-app/main/default/objects/OpportunityLineItem/fields/DimensionAToUnit__c.field-meta.xml
<CustomField>
    <fullName>DimensionAToUnit__c</fullName>
    <label>Dimension A to</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>