force-app/main/default/objects/OpportunityLineItem/fields/DimensioncalculationA__c.field-meta.xml
<CustomField>
    <fullName>DimensioncalculationA__c</fullName>
    <label>Dimension for calculation A</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>