force-app/main/default/objects/OpportunityLineItem/fields/EdgeRadiusMax__c.field-meta.xml
<CustomField>
    <fullName>EdgeRadiusMax__c</fullName>
    <label>Edge radius max</label> 
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>