force-app/main/default/objects/OpportunityLineItem/fields/EdgeRadiusMin__c.field-meta.xml
<CustomField>
    <fullName>EdgeRadiusMin__c</fullName>
    <label>Edge radius min</label> 
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>