force-app/main/default/objects/OpportunityLineItem/fields/EndCustomer__c.field-meta.xml
<CustomField>
    <fullName>EndCustomer__c</fullName>
    <label>End Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>