force-app/main/default/objects/OpportunityLineItem/fields/ExternalCostOfProduction__c.field-meta.xml
<CustomField>
    <fullName>ExternalCostOfProduction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Costs (external view)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>