force-app/main/default/objects/OpportunityLineItem/fields/FinalPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalPrice__c</fullName>
    <label>Offered Price (Net revenue)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>