force-app/main/default/objects/OpportunityLineItem/fields/FinishedGoods__c.field-meta.xml
<CustomField>
    <fullName>FinishedGoods__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finished Goods (For Price Caclulation)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FinishedGoods__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FinishedGoods__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>