force-app/main/default/objects/OpportunityLineItem/fields/FinishedGoodsSales__c.field-meta.xml
<CustomField>
    <fullName>FinishedGoodsSales__c</fullName> 
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finished Goods</label>
    <referenceTo>FinishedGoods__c</referenceTo>
    <relationshipLabel>Opportunity Product (Finished Goods)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>