force-app/main/default/objects/OpportunityLineItem/fields/FMN__c.field-meta.xml
<CustomField>
    <fullName>FMN__c</fullName>
    <formula>FinishedGoods__r.MaterialNumber__c</formula>
    <label>FMN</label>
    <type>Text</type>
</CustomField>