force-app/main/default/objects/OpportunityLineItem/fields/FreightCosts__c.field-meta.xml
<CustomField>
    <fullName>FreightCosts__c</fullName>
    <label>Freight Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>