force-app/main/default/objects/OpportunityLineItem/fields/HeatTreatmentSales__c.field-meta.xml
<CustomField>
    <fullName>HeatTreatmentSales__c</fullName>
    <label>Heat Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HeatTreatment</valueSetName>
    </valueSet>
</CustomField>