force-app/main/default/objects/OpportunityLineItem/fields/HighSellingFrequency__c.field-meta.xml
<CustomField>
    <fullName>HighSellingFrequency__c</fullName>
    <formula>IF(  NOT(ISBLANK(FinishedGoodsSales__c )) ,  TEXT(FinishedGoodsSales__r.SteelGradeLookup__r.HighSellingFrequency__c) , 
IF(  NOT(ISBLANK( LVPosition__c )) ,  TEXT(LVPosition__r.InternalSteelGrade__r.HighSellingFrequency__c) ,&apos;&apos; ))</formula>
    <label>High Selling Frequency</label>
    <type>Text</type>
</CustomField>