force-app/main/default/objects/OpportunityLineItem/fields/InternalDefectTest__c.field-meta.xml
<CustomField>
    <fullName>InternalDefectTest__c</fullName>
    <label>Internal Defect Test</label>
    <length>100</length>
    <type>Text</type>
</CustomField>