force-app/main/default/objects/OpportunityLineItem/fields/LastRefreshedDate__c.field-meta.xml
<CustomField>
    <fullName>LastRefreshedDate__c</fullName>
    <description>Populated every time CoP is fetched from Heroku</description>
    <label>Last Refreshed Date</label>
    <type>DateTime</type>
</CustomField>