force-app/main/default/objects/OpportunityLineItem/fields/LastSavedFinalPriceDate__c.field-meta.xml
<CustomField>
    <fullName>LastSavedFinalPriceDate__c</fullName>
    <label>Last Saved Final Price Date</label>
    <type>Date</type>
</CustomField>