force-app/main/default/objects/OpportunityLineItem/fields/LengthTo__c.field-meta.xml
<CustomField>
    <fullName>LengthTo__c</fullName>
    <label>Length To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>