force-app/main/default/objects/OpportunityLineItem/fields/LVPosition__c.field-meta.xml
<CustomField>
    <fullName>LVPosition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LV Position</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(5 OR (1 AND 2)) AND (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.DimensionATo__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>LVPostion__c.DimensionAFrom__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.DimensionATo__c</field>
            <operation>lessOrEqual</operation>
            <valueField>LVPostion__c.DimensionATo__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.DimensionAFrom__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>LVPostion__c.DimensionAFrom__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.DimensionAFrom__c</field>
            <operation>lessOrEqual</operation>
            <valueField>LVPostion__c.DimensionATo__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.DimensionATo__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LVPostion__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>