force-app/main/default/objects/OpportunityLineItem/fields/ManufacturingProcess__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingProcess__c</fullName>
    <label>Manufacturing process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LD</fullName>
            </value>
            <value>
                <fullName>E-Steel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>