force-app/main/default/objects/OpportunityLineItem/fields/Mnmax__c.field-meta.xml
<CustomField>
    <fullName>Mnmax__c</fullName>
    <label>Mn max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>