force-app/main/default/objects/OpportunityLineItem/fields/Mnmin__c.field-meta.xml
<CustomField>
    <fullName>Mnmin__c</fullName>
    <label>Mn min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>