force-app/main/default/objects/OpportunityLineItem/fields/Momax__c.field-meta.xml
<CustomField>
    <fullName>Momax__c</fullName>
    <label>Mo max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>