force-app/main/default/objects/OpportunityLineItem/fields/Momin__c.field-meta.xml
<CustomField>
    <fullName>Momin__c</fullName>
    <label>Mo min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>