force-app/main/default/objects/OpportunityLineItem/fields/Nbmax__c.field-meta.xml
<CustomField>
    <fullName>Nbmax__c</fullName>
    <label>Nb max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>