force-app/main/default/objects/OpportunityLineItem/fields/Nbmin__c.field-meta.xml
<CustomField>
    <fullName>Nbmin__c</fullName>
    <label>Nb min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>