force-app/main/default/objects/OpportunityLineItem/fields/Nimax__c.field-meta.xml
<CustomField>
    <fullName>Nimax__c</fullName>
    <label>Ni max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>