force-app/main/default/objects/OpportunityLineItem/fields/Nimin__c.field-meta.xml
<CustomField>
    <fullName>Nimin__c</fullName>
    <label>Ni min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>