force-app/main/default/objects/OpportunityLineItem/fields/Nmax__c.field-meta.xml
<CustomField>
    <fullName>Nmax__c</fullName>
    <label>N max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>