force-app/main/default/objects/OpportunityLineItem/fields/OfferedPrice__c.field-meta.xml
<CustomField>
    <fullName>OfferedPrice__c</fullName>
    <formula>FinalPrice__c  +  FreightCosts__c + Surcharge1__c + Surcharge2__c + Surcharge3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offered Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>