force-app/main/default/objects/OpportunityLineItem/fields/OpportunityCloseDateMonth__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCloseDateMonth__c</fullName>
    <formula>TEXT(MONTH( Opportunity.CloseDate))</formula>
    <label>Opportunity Close Date Month</label>
    <type>Text</type>
</CustomField>