force-app/main/default/objects/OpportunityLineItem/fields/OpportunityCloseDateYear__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCloseDateYear__c</fullName>
    <formula>TEXT(YEAR( Opportunity.CloseDate))</formula>
    <label>Opportunity Close Date Year</label>
    <type>Text</type>
</CustomField>