force-app/main/default/objects/OpportunityLineItem/fields/OrientationPrice__c.field-meta.xml
<CustomField>
    <fullName>OrientationPrice__c</fullName>
    <label>Orientation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>