force-app/main/default/objects/OpportunityLineItem/fields/OvalityInMM__c.field-meta.xml
<CustomField>
    <fullName>OvalityInMM__c</fullName>
    <formula>(ToleranceAPlus__c + ToleranceAMinus__c) * OvalityInPercent__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ovality in mm</label> 
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>