force-app/main/default/objects/OpportunityLineItem/fields/OvalityInPercent__c.field-meta.xml
<CustomField>
    <fullName>OvalityInPercent__c</fullName>
    <label>Ovality in %</label> 
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>