force-app/main/default/objects/OpportunityLineItem/fields/Pbmax__c.field-meta.xml
<CustomField>
    <fullName>Pbmax__c</fullName>
    <label>Pb max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>