force-app/main/default/objects/OpportunityLineItem/fields/Pbmin__c.field-meta.xml
<CustomField>
    <fullName>Pbmin__c</fullName>
    <label>Pb min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>