force-app/main/default/objects/OpportunityLineItem/fields/Pmax__c.field-meta.xml
<CustomField>
    <fullName>Pmax__c</fullName>
    <label>P max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>