force-app/main/default/objects/OpportunityLineItem/fields/Prakula__c.field-meta.xml
<CustomField>
    <fullName>Prakula__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Präkula</label>
    <referenceTo>Praekula__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>