force-app/main/default/objects/OpportunityLineItem/fields/PriceLevel1__c.field-meta.xml
<CustomField>
    <fullName>PriceLevel1__c</fullName>
    <label>Price Level 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>