force-app/main/default/objects/OpportunityLineItem/fields/PriceLevel2__c.field-meta.xml
<CustomField>
    <fullName>PriceLevel2__c</fullName>
    <label>Price Level 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>