force-app/main/default/objects/OpportunityLineItem/fields/PriceLevel3__c.field-meta.xml
<CustomField>
    <fullName>PriceLevel3__c</fullName>
    <label>Price Level 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>