force-app/main/default/objects/OpportunityLineItem/fields/ProductFinderStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductFinderStatus__c</fullName>
    <description>This field shows the result of the product finder process</description>
    <label>Product Finder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matching FMN found</fullName>
            </value>
            <value>
                <fullName>New combination of steel grade and rolling mill/further processing created. Only use as price indicator</fullName>
            </value>
            <value>
                <fullName>No matching steel grade found. Reach out to Controlling.</fullName>
            </value>
            <value>
                <fullName>Inductive heat treatment. Reach out to Controlling.</fullName>
            </value>
            <value>
                <fullName>FMN specified on Position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>