force-app/main/default/objects/OpportunityLineItem/fields/QuantityKg__c.field-meta.xml
<CustomField>
    <fullName>QuantityKg__c</fullName>
    <formula>IF( ISPICKVAL( QuantityUnit__c ,&apos;LBS&apos;), Quantity *0.45359237,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>