force-app/main/default/objects/OpportunityLineItem/fields/QuantityUnit__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnit__c</fullName>
    <label>Quantity Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moto</fullName>
            </value>
            <value>
                <fullName>Jato</fullName>
            </value>
            <value>
                <fullName>Stück</fullName>
            </value>
            <value>
                <fullName>LBS</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>