force-app/main/default/objects/OpportunityLineItem/fields/Rolling__c.field-meta.xml
<CustomField>
    <fullName>Rolling__c</fullName>
    <label>Rolling</label>
    <length>15</length>
    <type>Text</type>
</CustomField>