force-app/main/default/objects/OpportunityLineItem/fields/SalesComment__c.field-meta.xml
<CustomField>
    <fullName>SalesComment__c</fullName>
    <description>Place for the Sales user to add any additional comments</description>
    <label>Sales Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>