force-app/main/default/objects/OpportunityLineItem/fields/SemiFinishedGoods__c.field-meta.xml
<CustomField>
    <fullName>SemiFinishedGoods__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semi-finished goods number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SemiFinishedGoods__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SemiFinishedGoods__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>